Removed the unsued files and folders, as all that is needed for the microservice is the server.js file and the package.json file, as well as a couple of file to work nicely on glitch

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 
   "name": "my-glitch-app",
   "version": "0.0.1",
-  "description": "What am I about?",
+  "description": "Request Header Parser Microservice",
   "scripts": {
     "start": "node server.js"
   },
