--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-
-  "name": "my-glitch-app",
-  "version": "0.0.1",
+  "name": "request-header-parser-microservice",
+  "version": "0.0.2",
   "description": "Request Header Parser Microservice",
   "scripts": {
-    "start": "node server.js"
+    "start": "ts-node src/server.ts",
+    "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
     "express": "^4.16.3"
@@ -21,7 +18,20 @@
   "license": "MIT",
   "keywords": [
     "node",
+    "typescript",
     "glitch",
     "express"
-  ]
+  ],
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.8.3",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.8.4"
+  }
 }
