--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,10 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ "opened", "edited", "reopened", "synchronize", "ready_for_review" ]
-
-permission: 
-  contents: read
-
+    
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,9 +15,9 @@ jobs:
         node-version: [16.x]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Install Dependencies with Node.js ${{matrix.node-version}}
-      uses: actions/setup-node@v3
+    - uses: actions/checkout@v2
+    - name: Use with Node.js ${{matrix.node-version}}
+      uses: actions/setup-node@v2
       with:
         node-version: ${{matrix.node-version}}
     - run: npm ci
